# deckboss-agent

./: README.md  agent.py  pyproject.toml
.github/workflows/: ci.yml
.spark/: SHELL.md
.spark/active/: task-001.md
.spark/decisions/: decision-001.md
.spark/domain/: concept-001.md
.spark/lessons/: observation-001.md
.spark/questions/: hypothesis-001.md
deckboss_agent/: __init__.py  cli.py
deckboss_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_deckboss.py  test_deckboss_agent.py
