[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "deckboss-agent"
version = "0.1.0"
description = "Deck Operations Intelligence for deckboss.ai — catch processing, crew coordination, equipment tracking via PLATO"
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]
[project.urls]
Homepage = "https://github.com/SuperInstance/deckboss-agent"
