[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deckboss-agent"
version = "0.1.0"
description = "Deck Operations Intelligence — catch processing logs, crew coordination, equipment tracking via PLATO"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SuperInstance", email = "cocapn@proton.me"},
]
keywords = ["plato", "fishing", "deck", "catch", "equipment", "crew"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Maritime",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "httpx"]

[project.scripts]
deckboss = "deckboss_agent.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deckboss_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"